# anna

./: .env.dev  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  index.html  netlify.toml  package.json  pyproject.toml  pytest.ini  render-free.yaml  render.yaml  requirements-dev.txt  requirements-engine.txt  vercel.json
.claude/hooks/: session-start.sh
.github/workflows/: deploy-frontend.yml
allthethings/: app.py
allthethings/cli/: views.py
allthethings/engine_api/: agent_search.py  agent_spec.py  serialize.py  views.py
allthethings/engine_cli/: views.py
allthethings/engine_web/: views.py
allthethings/engine_web/templates/engine/: about.html  base.html  collections.html  compare.html  document.html  home.html  search.html
allthethings/page/templates/page/: home.html
allthethings/templates/layouts/: index.html
allthethings/up/: __init__.py  views.py
config/: settings.py
data-imports/: README.md  __init__.py  base.py  isbndb.py  libgen_li.py  libgen_rs.py  open_library.py  zlib.py
deploy/: Dockerfile  Dockerfile.free  entrypoint-free.sh  smoke.sh
docs/: AGENT_API.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  PLUGINS.md  openapi-agent-search.json  quality_tasks.md
docs/deck/: README.md  deck-stage.js  ds-base.js  image-slot.js  index.html  render_slides.py
docs/deck/_ds/organic-b5c8af1b-d438-4186-a607-4f630c701b41/: _ds_bundle.js  styles.css
docs/deck/_ds/organic-b5c8af1b-d438-4186-a607-4f630c701b41/fonts/: fonts.css
engine/: __init__.py  backend.py  collections.py  config.py  documents.py  embeddings.py  index.py  search.py  summarize.py  tasks.py
engine/ingest/: __init__.py  base.py  crawler.py  http.py  pdf.py  pipeline.py
engine/ingest/sources/: __init__.py  arm.py  arxiv.py  doe.py  espressif.py  github.py  ieee.py  linux_kernel.py  nasa.py  nist.py  riscv.py  shadowlibraries.py  stm32.py
engine/ingest/sources/data/: shadowlibraries.json
engine/pg/: __init__.py  search.py  store.py
frontend/: README.md  app.js  config.js  index.html  package.json  styles.css  vercel.json
static/: config.js
test/: conftest.py  test_cli.py  test_imports.py
test/allthethings/page/: test_views.py
test/allthethings/up/: test_views.py
test/engine/: test_api_agent_routes.py  test_api_agent_search.py  test_api_cors.py  test_api_search.py  test_collections.py  test_config.py  test_crawler.py  test_deck.py  test_documents.py  test_embeddings.py  test_pg.py  test_registry.py  test_search.py  test_shadowlibraries.py  test_sources.py  test_summarize.py  test_web_snippet.py
test/lib_test/: test.py
