[project]
name = "annas-archive"
version = "0.1.0"
description = "Anna's Archive - Search engine for books, papers, comics, magazines"
readme = "README.md"
license = {text = "CC0-1.0"}
requires-python = ">=3.9"
authors = [
    {name = "Anna's Archive", email = "info@annas-archive.org"}
]
keywords = ["search", "books", "academic", "library", "archive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: CC0-1.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
    "pytest-timeout>=2.1.0",
    "black>=22.8.0",
    "flake8>=5.0.4",
    "isort>=5.10.1",
]
data = [
    "tqdm>=4.64.1",
    "httpx>=0.23.0",
    "isbnlib>=3.10.10",
    "langcodes>=3.3.0",
    "langdetect>=1.0.9",
]
engine = [
    # Vers3Dynamics Engineering Intelligence: semantic search + PDF indexing.
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
    "pypdf>=4.0.0",
    "elasticsearch>=8.5.0",
    "httpx>=0.23.0",
    "SQLAlchemy>=1.4.41",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 80
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
skip_gitignore = true
skip = [".venv", "venv"]

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    # Engineering Intelligence Flask blueprints are exercised by integration
    # tests (they need Elasticsearch/Flask), not the unit-test coverage gate.
    "*/engine_web/*",
    "*/engine_api/*",
    "*/engine_cli/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true